k8s-ingress-gateway-setup-v2/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-lb-gw
spec:
  controllerName: gateway.k8s.aws/lb
  description: "AWS LB using Gateway in K8S"
